--- a/universe/styles/ReunionesStyle.module.css
+++ b/universe/styles/ReunionesStyle.module.css
@@ -29,6 +29,15 @@
 
 }
 
+.square:hover .head_rectangle {
+    cursor: pointer;
+    background-color: #b4fff4;
+}
+
+.square:hover .bottom_rectangle {
+    cursor: pointer;
+}
+
 .bottom_rectangle_text {
     position: absolute;
     left: 17%;
@@ -50,25 +59,32 @@
     color: #000000;
 }
 
+
+.add {
+    position: fixed;
+    width: 396px;
+    height: 100px;
+    left: 71%;
+    top: 81%;
+    cursor: pointer;
+}
+
 .add_image {
     position: absolute;
     width: 100px;
     height: 100px;
-    left: 91%;
-    top: 81%;
 }
 
 .add_text {
     position: absolute;
-    left: 74%;
-    top: 86%;
-    
     font-family: 'Mulish';
     font-style: normal;
     font-weight: 700;
     font-size: 28px;
     line-height: 22px;
     /* identical to box height, or 79% */
+    left: 120px;
+    top: 33px;
     
     display: flex;
     align-items: center;
