--- a/universe/styles/ReunionesStyle.module.css
+++ b/universe/styles/ReunionesStyle.module.css
@@ -31,7 +31,7 @@
 
 .square:hover .head_rectangle {
     cursor: pointer;
-    background-color: #b4fff4;
+    background-color: #9fdcd2;
 }
 
 .square:hover .bottom_rectangle {
