--- a/universe/styles/NavBarsStyles.module.css
+++ b/universe/styles/NavBarsStyles.module.css
@@ -1,15 +1,14 @@
 .lateral_NavBar{
     background-color:#A9E9DF;
     width: 60px;
-    height: 100vh;
+    height: 100%;
     justify-content: center;
     text-align: center;
     position: fixed;
-    top:80px;
     transition: 850ms;
     box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
-    padding-top: 20px;
-    
+    padding-top:100px;
+
 }
 
 .button_Lateral_NavBar{
