--- a/universe/styles/globals.css
+++ b/universe/styles/globals.css
@@ -56,18 +56,101 @@ h5{ /*Texto normal*/
 body {
   
 }
+
+main{
+  width: 100%;
+  height: 100%;
+  
+}
+
+main#main.active{
+  filter: blur(3px);
+  filter: brightness(50%);
+  background-color: white;
+  user-select: none;
+  
+}
+
+button {
+  display: flex;
+  border-radius: 50px;
+  background-color: #285F76;
+  width: 150px;
+  height: 35px;
+  justify-content: center;
+  align-items: center;
+  
+}
+button h3{
+  color: white;
+}
+button:hover{
+  background-color: #1D3752;
+}
+.principal_Content{
+  position: relative;
+  height: 80%;
+  width:100%;
+  padding-top: 100px;
+  padding-left: 80px;
+}
+.principal_Content_withoutLateralNavbar{
+  position: relative;
+  height: 80%;
+  width:100%;
+  padding-top: 100px;
+  align-items: center;
+  justify-content: center;
+
+}
+
 .desplegableOptions{
   width: 200px;
   height: auto;
-  top:80px;
   background-color: #CAFBF2;
   box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   position: absolute;
   transition: 1000ms;
+  z-index: 10;
+  padding: 5px;
   
 }
-main{
-  padding: 100px;
-  padding-left: 80px;
+.desplegableOptions div{
+  display: flex;
+  padding: 2px;
+  height: 32px;
+  width: 100%;
+  border-bottom: 1px solid #285F76;
+  
+}
+
+
+.desplegableOptions div:hover{
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  background-color: #ABC7C2;
+  cursor: pointer;
+  
+}
+.button_crear{
+  display: flex;
+  position: fixed;
+  background-color: #CAFBF2;
+  border-radius: 100%;
+  bottom: 30px;
+  right: 40px;
+  width: 80px;
+  height: 80px;
+  justify-content: center;
+  align-items: center;
+  transition: 850ms;
+}
+.button_crear:hover{
+  background-color: #cee9e4;
+  cursor: pointer;
+  width: 90px;
+  height: 90px;
+
 }
