--- a/universe/styles/globals.css
+++ b/universe/styles/globals.css
@@ -55,6 +55,12 @@ h5{ /*Texto normal*/
   
 
 }
+label{
+  color: #000000;
+  font-weight: 400;
+  font-family: 'Mulish', sans-serif;
+  font-size: 16px;
+}
 
 
 main{
@@ -74,7 +80,8 @@ main#main.active{
 form{
   position: absolute;
   width: 800px;
-  height: 400px;
+  min-height: 400px;
+  max-height: auto;
   background-color: #E8FFFB;
   border-radius: 20px;
   top: 25%;
@@ -111,22 +118,28 @@ form div#encabezado div{
 
 form div#inputs{
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
   padding: 30px;
   width: 100%;
-  height: 300px;
+  min-height: 300px;
+  max-height: auto;
   background-color: #E8FFFB;
   border-radius: 20px;
   justify-content: flex-start;
   align-items: flex-start;
 
 }
+
+form div#inputs div{
+  max-width: auto;
+  min-width: 50%;
+}
+
+
 input[type=text],input[type=number], input[type=date], input[type=time], input[type=month]{
-  width: 250px;
-  height: 40px;
+  width: 350px;
+  height: 45px;
   padding: 12px 20px;
-  margin:8px 8px 8px 8px ;
+  margin-top: 5px;
   box-sizing: border-box;
   background: #FFFFFF;
   border: 2.72246px solid rgba(0, 0, 0, 0.1);
