--- a/universe/styles/NavBarsStyles.module.css
+++ b/universe/styles/NavBarsStyles.module.css
@@ -8,6 +8,7 @@
     transition: 850ms;
     box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
     padding-top:100px;
+    z-index: 99;
 }
 
 .button_Lateral_NavBar{
@@ -20,7 +21,7 @@
     align-items: center;
 }
 .button_Lateral_NavBar:hover{
-    background-color: #9eb8b4;
+    background-color: #95a6a3;
 }
 .button_Lateral_NavBar a{
     border-bottom: 1.5px solid #ffffff;
