--- a/universe/styles/registerStyle.module.css
+++ b/universe/styles/registerStyle.module.css
@@ -1,122 +1,164 @@
 .container {
-    display: flex;
-    height: 100vh;
-  }
+  display: flex;
+  height: 100vh;
+}
+
+.leftContainer {
+  background-color: #ffffff;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 2rem;
+  position: relative;
   
-  .leftContainer {
-    width: 50%;
-    background-color: #a9e9df;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .rectangle {
-    width: 100%;
-    height: 25vh;
-  }
-  
-  .logoContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 25vh;
-  }
-  
-  .logoImage {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .registerHeading {
-    font-size: 2.5rem;
-    font-weight: 800;
-    color: #1d3752;
-    margin-top: 2rem;
-  }
-  
-  .formContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 65vh;
-  }
-  
-  .formRegistro {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 80%;
-  }
-  
-  .inputGroup {
-    margin-bottom: 1.5rem;
-    width: 100%;
-  }
-  
-  .input {
-    width: 100%;
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .inputUsername.inputError,
-  .inputEmail.inputError,
-  .inputPassword.inputError {
-    border-color: red;
-  }
-  
-  .errorMessage {
-    color: red;
-    margin-top: 0.5rem;
-  }
-  
-  .registerButton {
-    border-radius: 4px;
-    background-color: #285f76;
-    color: #ffffff;
-    width: 150px;
-    height: 35px;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2rem;
-  }
-  
-  .rightContainer {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 1rem;
-  }
-  
-  .searchContainer {
-    margin-bottom: 1rem;
-  }
-  
-  .inputSearch {
-    width: 100%;
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .subjectResults {
-    max-height: 200px;
-    overflow-y: auto;
-    margin-top: 0.5rem;
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .selectedSubjectsContainer {
-    height: 65%;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 0.5rem;
-    overflow-y: auto;
-  }
+}
+
+.rectangle {
+  display: flex;
+  background-color: #a9e9df;
+  width: 100vw;
+  height: 25vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.rectangle img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.registerContainer {
+  width: 100%;
+  margin-top: 2rem;
+}
+
+.registerHeading {
+  font-size: 2rem;
+  font-weight: 800;
+  color: #1d3752;
+  margin-bottom: 1rem;
+}
+
+
+.formRegistro {
+  background-color: #ffffff;
+  width: 90%;
+  position: absolute;
+  top: 450px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  min-height: 200px;
+}
+
+.inputGroup {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+.inputUsername[type=text],
+.inputEmail,
+.inputPassword {
+  width: 100%;
+  height: 45px;
+  padding: 12px 20px;
+  margin-top: 5px;
+  box-sizing: border-box;
+  background: #ffffff;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.05);
+  border-radius: 8px;
+  cursor: pointer;
+}
+.inputUsername.inputError[type=text] {
+  border-color: red;
+  background-color: #ffebee;
+}
+
+.inputError {
+  border-color: red;
+  background-color: #ffebee;
+}
+
+.errorMessage {
+  color: red;
+  font-size: 0.8rem;
+  margin-top: 0.5rem;
+}
+
+.registerButton {
+  background-color: #285f76;
+  color: #ffffff;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  margin-top: 1rem;
+}
+
+.rightContainer {
+  background-color: #ffffff;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
+
+.materiasContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.inputSearch {
+  width: 100%;
+  height: 45px;
+  padding: 12px 20px;
+  margin-bottom: 1rem;
+  box-sizing: border-box;
+  background: #ffffff;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.05);
+  border-radius: 8px;
+}
+
+.subjectResults {
+  max-height: 200px;
+  overflow-y: auto;
+  margin-bottom: 1rem;
+}
+
+.selectedSubjectsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.selectedSubjectButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #285f76;
+  color: #ffffff;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  border: none;
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+  cursor: pointer;
+}
+
   
