--- a/universe/styles/loginStyle.module.css
+++ b/universe/styles/loginStyle.module.css
@@ -24,33 +24,12 @@
     padding: 2rem;
   }
   
-  .logoContainer {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: -2rem;
-  }
   
   .logoImage {
-    max-width: 800px;
+    max-width: auto;
     height: auto;
   }
   
-  .welcomeText {
-    font-size: 1.7rem;
-    font-weight: 800;
-    margin-top: -4rem;
-    text-align: center;
-  }
-  
-  .formContainer {
-    background-color: #ffffff;
-    width: 100%;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
   
   .formLogin {
     background-color: #ffffff;
@@ -124,17 +103,6 @@
     margin-top: 1.5rem;
   }
   
-  .registerContent {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .iconContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
   
   .iconImage {
     max-width: 100%;
@@ -158,11 +126,6 @@
     color: #1d3752;
   }
   
-  .registerButtonGroup {
-    display: flex;
-    justify-content: center;
-  }
-  
   .registerButton {
     display: flex;
     border-radius: 50px;
@@ -172,7 +135,58 @@
     height: 35px;
     justify-content: center;
     align-items: center;
-    margin-top: 7rem;
+    margin-top: 2.7rem;
+  }
+
+
+  @media (max-width: 767px) {
+
+    .container {
+      flex-direction: column;
+    }
+  
+    .rightContainer {
+      width: 100%;
+      height: 35%;
+      order: 2;
+      margin-top: 20rem;
+
+    }
+
+    .formLogin {
+      background-color: #ffffff;
+      width: 80%;
+      height: 50;
+    }
+
+    .desktopOnly {
+      display: none;
+    }
+
+
+    .leftContainer {
+      width: 100%;
+      height: 40%;
+    }
+    
+    .registerContent {
+      order: 3;
+      margin-top: 10rem;
+    }
+
+    .registerHeading {
+      margin-top: 0rem;
+      margin-bottom: 1rem;
+    }
+
+    .registerText {
+      margin-top: 1rem;
+      margin-bottom: 2rem;
+    }
+
+    .registerButton {
+      margin-top: 0rem;
+    }
   }
   
   
