--- a/universe/styles/globals.css
+++ b/universe/styles/globals.css
@@ -152,9 +152,10 @@ form div#inputs div{
 }
 
 
-input[type=text],input[type=number], input[type=date], input[type=time], input[type=month]{
+input[type=text],input[type=number], input[type=date], 
+input[type=time], input[type=month], input[type=password],input[type=email]{
   min-width: 100px;
-  width: 95%;
+  width: 100%;
   height: 45px;
   padding:12px;
   margin-top: 5px;
@@ -166,7 +167,6 @@ input[type=text],input[type=number], input[type=date], input[type=time], input[t
   cursor:pointer;
   
 }
-
 
 button[type=submit]{
   display: flex;
@@ -218,6 +218,18 @@ button {
   padding-top: 100px;
   align-items: center;
   justify-content: center;
+
+}
+
+.principal_Content_Profile{
+  position: relative;
+  height: 80%;
+  width:100%;
+  padding-top: 120px;
+  align-items: center;
+  justify-content: center;
+  padding-left: 80px;
+  padding-right: 40px;
 
 }
 
