--- a/universe/styles/homeComunidadStyles.module.css
+++ b/universe/styles/homeComunidadStyles.module.css
@@ -58,6 +58,21 @@
 }
 
 
+.principalContentProfile {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 99%;
+    margin-left: 10px;
+}
+.component1, .component2 {
+    width: 60%; 
+    text-align: left; /* centers the text inside the component */
+}
+
 
 
   
