--- a/universe/styles/registerStyle.module.css
+++ b/universe/styles/registerStyle.module.css
@@ -62,26 +62,8 @@
   margin-bottom: 0.3rem;
 }
 
-.inputUsername[type=text],
-.inputEmail,
-.inputPassword {
-  width: 100%;
-  height: 45px;
-  padding: 12px 10px;
-  margin-top: 3px;
-  box-sizing: border-box;
-  background: #ffffff;
-  border: 2px solid rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.05);
-  border-radius: 8px;
-  cursor: pointer;
-}
-.inputUsername.inputError[type=text] {
-  border-color: red;
-  background-color: #ffebee;
-}
-
-.inputError {
+.inputUsername.inputError[type=text], .inputEmail.inputError[type=email],
+.inputPassword.inputError[type=password]{
   border-color: red;
   background-color: #ffebee;
 }
@@ -101,6 +83,23 @@
   cursor: pointer;
   margin-top: 1rem;
   align-self: center;
+}
+
+@media (max-width: 767px) {
+
+  .formRegistro {
+    background-color: #ffffff;
+    width: 80%;
+    position: absolute;
+    top: 510px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    min-height: 200px;
+  
+  }
+
 }
 
 
