--- a/universe/styles/homeComunidadStyles.module.css
+++ b/universe/styles/homeComunidadStyles.module.css
@@ -10,9 +10,9 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding: 2rem;
+    padding-left: 5rem;
+    padding: 1rem;
     position: relative;
-    margin-left: 45px;
 }
 
 .rightContainer {
@@ -22,7 +22,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 7rem;
+    padding: 1rem;
     position: relative;
 }
 
@@ -31,7 +31,7 @@
     flex-direction: column;
     align-items: center;
     padding: 10px;
-    min-width: 600px;
+    width: 100%;
     min-height: 150px;
     height: auto;
     background-color: #A9E9DF;
@@ -57,7 +57,22 @@
     
 }
 
+@media (max-width: 767px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+    
 
+    .leftContainer, .rightContainer {
+        width: 100%;
+        margin-bottom: -20px;
+    }
+
+    .rectangle {
+        width: 100%;
+    }
+}
 
 
   
