--- a/universe/styles/TarjetaDocumentoStyles.module.css
+++ b/universe/styles/TarjetaDocumentoStyles.module.css
@@ -7,18 +7,32 @@
     border-radius: 5px;
     transition: 850ms;
     justify-content: center;
-    margin:10px
+    margin:10px;
     
 }
 .tarjeta_Temas_Color{
+    display: grid;
     position: relative;
-    background-color: #E8FFFB;
+    grid-template-columns: 25% 60% 15%;
     width: 100%;
-    height:25%;
-    border-radius: 5px;
+    height: 30%;
+    background-color: #E8FFFB;
     padding: 5px;
-    
+    padding-left: 20px;
+    align-items: center;
+    justify-content: flex-start;
+    word-wrap: break-word;
+    border-radius: 5px;
 }
+
+.titulo_Documento{
+    /*Texto normal negrilla*/ 
+        color: #000000;
+        font-weight: 700;
+        font-family: 'Mulish', sans-serif;
+        font-size: 18px;
+}
+
 .tarjeta_icono{
     position:relative;
     width: 60%;
