--- a/universe/styles/globals.css
+++ b/universe/styles/globals.css
@@ -316,3 +316,16 @@ button {
 }
 
 
+.corner_Content{
+  position: relative;
+  height: 20%;
+  width: 100%;
+  padding-top: 25px;
+  padding-left: 100px;
+  padding-right: 150px;
+  justify-content: right;
+  align-items: center;
+}
+
+
+
