--- a/universe/styles/ReunionesStyle.module.css
+++ b/universe/styles/ReunionesStyle.module.css
@@ -117,6 +117,12 @@
     transform: translate(-50%, -50%);
     text-align: center;
 
+    font-family: 'Mulish';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 22px;
+
     background: #E8FFFB;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
