--- a/universe/styles/globals.css
+++ b/universe/styles/globals.css
@@ -153,7 +153,7 @@ form div#inputs div{
 
 
 input[type=text],input[type=number], input[type=date], 
-input[type=time], input[type=month], input[type=password],input[type=email]{
+input[type=time], input[type=month],input[type=email]{
   min-width: 100px;
   width: 100%;
   height: 45px;
