--- a/universe/styles/homeComunidadStyles.module.css
+++ b/universe/styles/homeComunidadStyles.module.css
@@ -57,6 +57,30 @@
     
 }
 
+.principalContentProfile {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 97%;
+    margin-left: 10px;
+}
+.component1, .component2 {
+    width: 47%; 
+    text-align: left; /* centers the text inside the component */
+}
+.textContainer {
+    padding: 0.5rem;
+    border: 1px solid #A9E9DF;
+    border-radius: 10px;
+    margin-top: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+}
+
 @media (max-width: 767px) {
     .container {
         flex-direction: column;
