--- a/universe/styles/registerStyle.module.css
+++ b/universe/styles/registerStyle.module.css
@@ -62,6 +62,21 @@
   margin-bottom: 0.3rem;
 }
 
+.inputPassword[type=password] {
+  min-width: 100px;
+  width: 100%;
+  height: 45px;
+  padding: 12px;
+  margin-top: 5px;
+  box-sizing: border-box;
+  background: #FFFFFF;
+  border: 2.72246px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 5.44492px 5.44492px rgba(0, 0, 0, 0.05);
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+
 .inputUsername.inputError[type=text], .inputEmail.inputError[type=email],
 .inputPassword.inputError[type=password]{
   border-color: red;
