Funcion fetch editar perfil y cambios de estilo

--- a/universe/styles/loginStyle.module.css
+++ b/universe/styles/loginStyle.module.css
@@ -68,7 +68,7 @@
     background-color: #ffebee;
   }
   
-  .inputError {
+  .inputError.inputError[type=password] {
     border-color: red;
     background-color: #ffebee;
   }
