--- a/universe/styles/globals.css
+++ b/universe/styles/globals.css
@@ -153,20 +153,32 @@ form div#inputs div{
 
 
 input[type=text],input[type=number], input[type=date], 
-input[type=time], input[type=month],input[type=email]{
+input[type=time], input[type=month],input[type=email],input[type=password]{
   min-width: 100px;
   width: 100%;
   height: 45px;
-  padding:12px;
-  margin-top: 5px;
+  padding:12px 10px;
+  margin-top: 3px;
   box-sizing: border-box;
   background: #FFFFFF;
-  border: 2.72246px solid rgba(0, 0, 0, 0.1);
+  border: 2px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0px 5.44492px 5.44492px rgba(0, 0, 0, 0.05);
   border-radius: 8px;
   cursor:pointer;
   
 }
+
+.inputError {
+  border-color: red;
+  background-color: #ffebee;
+}
+
+.errorMessage {
+  color: red;
+  font-size: 0.8rem;
+  margin-top: 0.5rem;
+}
+
 input[type="file"]{
   height: 45px;
   margin-top: 5px;
