--- a/universe/styles/homeComunidadStyles.module.css
+++ b/universe/styles/homeComunidadStyles.module.css
@@ -49,12 +49,28 @@
     background-color: #285f76;
     color: #ffffff;
     min-width: 100px;
-    min-height: 40px;
+    min-height: 45px;
     height: auto;
-    align-self: flex-end;
-    margin-top: auto;
+    align-self: center;
+    margin-top: 3rem;
     margin-bottom: auto;
-    
+
+}
+
+
+.inputUsername.inputError[type=text] {
+    border-color: red;
+    background-color: #ffebee;
+}
+
+.inputEmail.inputError[type=text] {
+    border-color: red;
+    background-color: #ffebee;
+}
+
+.inputPassword.inputError[type=password] {
+    border-color: red;
+    background-color: #ffebee;
 }
 
 .principalContentProfile {
@@ -66,11 +82,29 @@
     align-items: center;
     width: 97%;
     margin-left: 10px;
+
 }
+
+.inputContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; 
+    width: 100%; 
+    margin-right: 20px;
+    margin-left: 15px;
+}
+
 .component1, .component2 {
     width: 47%; 
-    text-align: left; /* centers the text inside the component */
+  
 }
+
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+}
+
 .textContainer {
     padding: 0.5rem;
     border: 1px solid #A9E9DF;
@@ -81,14 +115,39 @@
     flex-direction: column;
 }
 
+.formProfile {
+    position: static;
+    width: 100%;
+    min-height: 0;
+    max-height: 100%;
+    background-color: transparent;
+    border-radius: 0;
+    top: auto;
+    left: auto;
+    z-index: auto;
+    transition: none;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    margin-right: 20px;
+    margin-left: 10px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+
+
 @media (max-width: 767px) {
     .container {
         flex-direction: column;
         align-items: center;
     }
-    
 
-    .leftContainer, .rightContainer {
+
+    .leftContainer,
+    .rightContainer {
         width: 100%;
         margin-bottom: -20px;
     }
@@ -101,7 +160,7 @@
 
 
 
-  
-  
-  /* Additional styles for the rest of the elements */
-  /* ... */
+
+
+/* Additional styles for the rest of the elements */
+/* ... */
